memory restriction fix. Logic of choose added